# internCRM

./: .gitignore  README.md
backend/: config.py  pyproject.toml  requirements.txt
backend/branches/: crud.py
backend/candidates/: schemas.py  views.py
backend/certs/: key.txt
backend/cities/: crud.py
backend/core/auth/: auth.py
backend/core/email/: email.py
backend/core/models/: __init__.py  branch.py  candidate.py  intern.py  structure.py  user.py
backend/core/tests_forms/: gforms.py
backend/interns/: schemas.py
backend/status/: crud.py  views.py
backend/users/: crud.py  schemas.py
frontend/html/: index.html  package-lock.json
frontend/html/.stfolder/: syncthing-folder-89be36.txt
frontend/html/css/: login.css  webform.css
frontend/html/js/: accessToAdmin.js  admin.js  keyboardNavigation.js  login.js  panel-left.js  webform.js
nginx/: nginx.conf
server_help/: docker-compose.yml  firewall.sh  sshd_config  sysctl.conf
src/: Dockerfile  docker-compose.yml  nginx.conf
src/backend/: .env  Dockerfile  config.py  env-example  main.py  pyproject.toml
src/backend/branches/: crud.py  schemas.py  views.py
src/backend/candidates/: crud.py  schemas.py  views.py
src/backend/certs/: jwt-private.pem  jwt-public.pem
src/backend/cities/: schemas.py  views.py
src/backend/core/: __init__.py
src/backend/core/auth/: auth.py  crud.py  helpers.py  (+4 more)
src/backend/interns/: crud.py  views.py
src/backend/status/: crud.py  schemas.py  views.py
src/backend/users/: schemas.py  views.py
src/backend/webform/: views.py
src/frontend/html/: index.html
(+25 files in other folders)
