[tool.poetry]
name = "interncrm"
version = "0.1.0"
description = "CRM-system for recruting interns"
authors = ["EgeorUsl <EgorEger@proton.me>"]
license = "GPL3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiomysql = "^0.2.0"
fastapi-mail = "^1.4.1"
sqlalchemy = "^2.0.30"
pyjwt = "^2.8.0"
fastapi = "^0.111.0"
asyncio = "^3.4.3"
fastapi-users = {extras = ["sqlalchemy"], version = "^13.0.0"}
google-api-python-client = "^2.133.0"
oauth2client = "^4.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
